<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bluetooth</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world"></string>
    <string name="wifi_start">wifi开启</string>
    <string name="wifi_stop">wifi关闭</string>
    <string name="wifi_read">读取wifi状态</string>
    <string name="link">启动</string>
   	<string name="edit_ip">192.168.22.11</string>
   	<string name="port">6800</string>
   	<string name="receive"></string>
   	<string name="test">连通测试</string>
   	<string name="camera_mode">进入摄像模式</string>

</resources>